rendered/envs/talos/kube-prometheus-stack/mutatingwebhookconfiguration-kube-prometheus-stack-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/component: prometheus-operator-webhook
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 76.5.1
    chart: kube-prometheus-stack-76.5.1
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prometheus-stack-admission
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kube-prometheus-stack-operator
        namespace: kube-prometheus-stack
        path: /admission-prometheusrules/mutate
    failurePolicy: Ignore
    name: prometheusrulemutate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - prometheusrules
    sideEffects: None
    timeoutSeconds: 10
